# mag-bookstack

./: .gitignore  README.md  asana_create_task_test.py  bookstack_webhook.py  docker-compose.yml  langgraph_agent.py  main.py  pyproject.toml  test_asana_agent.py
docs/: ASANA_QUICK_START.md  ASANA_TOOL_GUIDE.md  ASANA_TOOL_IMPLEMENTATION.md  README_prev.md
scripts/: README.md  bookstack_webhook.py  embed_bookstack.py  populate_bookstack.py  query_bookstack.py  requirements.txt  webhook_utils.py
tests/: test_webhook_payload.py
